<resources>
    <string name="app_name">Poke</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hola">Bienvenido</string>
    <string name="nav_header_title">Pokedex</string>
    <string name="nav_header_subtitle">Benjamin Mora - Sebastian Orrego</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="img">IMG</string>
    <string name="add">Agregar</string>
    <string name="update">Actualizar</string>
    <string name="desactivar">desactivar</string>
    <string name="listar">Listar</string>
    <string name="tipo">Tipos</string>
    <string name="habilidad">Habilidades</string>
    <string name="pokee">Pokemones</string>
    <string name="estadi">Estadistica</string>
    <string name="liss">Listas</string>
    <string name="salir">Salir</string>
    <string name="lista">Lista</string>
    <string name="reporte">Reportes</string>
    <string name="nombrePoke">Nombre Pokemon....</string>
    <string name="num">Numero....</string>
    <string name="FechaI">Fecha Inscripción</string>
    <string name="nombreLista">Nombre Lista....</string>
    <string name="Cant">Cantidad Disponible....</string>
    <string name="PrecioSinIva">Ingrese Valor....</string>
    <string name="valor">$0</string>
    <string name="Pokemon">Elegir Pokemon....</string>
    <string name="Tipo">Elegir Tipo....</string>
    <string name="Habilidad">Elegir Habilidad....</string>
    <string name="cantidad">0</string>
    <string name="valorS">Precio s/Iva:</string>
    <string name="valorC">Precio con Iva:</string>
    <string name="valorD">Precio Dolar:</string>
    <string name="tipoItem">Tipo:</string>
    <string name="habilidadItem">Habilidad:</string>
    <string name="PokemonItem">Pokemon:</string>
    <string name="calcular">Calcular</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">Id</string>
    <string name="nombre">Nombre</string>
    <string name="Estado">Estado</string>
    <string name="EditarTipo">Editar Tipo</string>
    <string name="EditarHabilidad">Editar Habilidad</string>
    <string name="EditarPokemon">Edición Pokemon</string>
    <string name="EditarLista">Edición Lista</string>
    <string name="nombreTipo">Nombre Tipo...</string>
    <string name="nombreHabilidad">Nombre Habilidad...</string>
    <string name="estadistica">Estadistica</string>
    <string name="Prueba">Prueba 2 Android</string>
    <string name="Integrantes">Sebastian Orrego - Benjamin Mora</string>
    <string name="lista_pokemones">Lista de Pokemones</string>
    <string name="imagen">imagen</string>
    <string name="search_pokemon">Buscar Pokemon</string>
</resources>
