<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".context.EditarLista" android:orientation="vertical">

    <TextView
            android:text="@string/EditarLista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView4" android:textStyle="bold"
            android:textAlignment="center" android:textSize="18sp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombreListaEdit" android:hint="@string/nombreLista"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/Cant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="1"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtCantidadEdit" android:layout_weight="1" android:hint="@string/cantidad"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/valorS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_weight="1"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/txtValorPEdit" android:layout_weight="1" android:hint="@string/valor"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/valorC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView8" android:layout_weight="1"/>
        <TextView
                android:text="@string/valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/lblPrecioConIvaEdit" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/valorD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView10" android:layout_weight="1"/>
        <TextView
                android:text="@string/valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/lblValorDolarEdit" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/habilidadItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/textView12" android:layout_weight="1"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/sp_habilidadEdit" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/tipoItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/textView11" android:layout_weight="1"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/sp_tipoEdit" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/PokemonItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView20" android:layout_weight="1"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/sp_pokemonEdit" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/Estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView13" android:layout_weight="1"
                android:textSize="18sp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/lblEstadoListaEdit" android:layout_weight="1"/>
    </LinearLayout>
    <Button
            android:text="@string/calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnCalcularEdit"/>
    <Button
            android:text="@string/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnActualizarListaEdit"/>
</LinearLayout>