<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".context.AgregarPokemon" android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textStyle="bold"
            android:textAlignment="center" android:textSize="30sp" android:text="@string/pokee"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombrePoke" android:hint="@string/nombrePoke"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/txtNumero" android:hint="@string/num"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:text="@string/FechaI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnFecha" android:layout_weight="1"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/lblFecha" android:layout_weight="1"/>
    </LinearLayout>
    <Button
            android:text="@string/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnAgregarPoke"/>
</LinearLayout>