<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".context.EditarPokemon" android:orientation="vertical">
    <TextView
            android:text="@string/EditarPokemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textStyle="bold"
            android:textAlignment="center" android:textSize="30sp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombrePokeEdit" android:hint="@string/nombrePoke"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/txtNumeroEdit" android:hint="@string/num"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:text="@string/FechaI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnFechaEdit" android:layout_weight="1"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/lblFechaEdit" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/Estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_weight="1"
                android:textSize="24sp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/lblEstado" android:layout_weight="1"/>
    </LinearLayout>
    <Button
            android:text="@string/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnActualizarPoke"/>
</LinearLayout>