<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".context.AgregarLista"
        android:orientation="vertical">

    <TextView
            android:text="@string/pokee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="18sp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombreLista"
            android:hint="@string/nombreLista"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/habilidadItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView21"
                android:layout_weight="1"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sp_habilidad"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/tipoItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView11"
                android:layout_weight="1"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sp_tipo" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/PokemonItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView20"
                android:layout_weight="1"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sp_pokemon"
                android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:text="@string/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnAgregarLista"/>
    </LinearLayout>
</LinearLayout>